@startuml

class Konto {
-kontoNummer:String
+getKontoNummer():String
}

class GiroKonto {
-dispoRahmen:double
}

class SparKonto {
-papierlos:boolean
}

class Transaktion {
-gegenKontoNummer:String
-betrag:double
-verwendungszweck:String
}

class Kunde {
-name:String
-giroKonto:GiroKonto
-sparKonto:SparKonto
+getKonten():List<Konto>
}

class NameValidator {
-badWords:List<String>
+validateName(name:String):bool
}

Konto "1" --* "*" Transaktion
GiroKonto--|>Konto
SparKonto--|>Konto
Kunde "1" --o "1" GiroKonto
Kunde "1" --o "1" SparKonto
Kunde -- NameValidator

@enduml